# phonolyze

./: .gitignore  Cargo.toml  _build.rs  build-wasm.sh  build.rs
.cargo/: config.toml
src/: audio.rs  camera.rs  color.rs  ease.rs  event.rs  fft.rs  file.rs  gradient.rs  layers.rs  lib.rs  main.rs  render.rs  resource.rs  scale.rs  shader.wgsl  texture.rs  vertex.rs  view.rs
src/audio/: file.rs  mod.rs  player.rs
src/layers/: analysis.rs  analysis.wgsl  gui.rs  meter.rs  meter.wgsl  mod.rs  scaled_image.rs  shader.wgsl
src/uniforms/: camera.rs  color.rs  gradient.rs  mod.rs  progress.rs  scale.rs
www/: index.html
